<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">스마트 캐리어</string>
    <string name="navigation_drawer_open">네비게이션 바 열기</string>
    <string name="navigation_drawer_close">네비게이션 바 닫기</string>
    <string name="nav_header_title">스마트 캐리어</string>
    <string name="nav_header_subtitle">Smart Suitcase with BLE</string>
    <string name="nav_header_desc">네비게이션 해더</string>
    <string name="action_autoSearch">자동 검색</string>
    <string name="action_appInfo">앱 정보</string>
    <string name="action_calib">무게 영점 초기화</string>
    <string name="splash_name">Suitcase Genie</string>
    <string name="weight_popup">Notification</string>
    <string name="app_version">ver 1.311</string>
    <string name="app_date">2024.11.08/12</string>
    <string name="app_update_log0">캐리어를 잠그는 기능이 새로 추가되었습니다!\n캐리어 알림 기능 추가, UI/UX 디자인 개선\n앱 정보 화면 개선</string>
    <string name="app_update_log1">무게 데이터가 올바르지 않은 경우의 동작 수정\n캐리어와 통신 로직 수정\n앱 버그 수정, 앱 코드 최적화, 튕김 현상 개선 등</string>
    <string name="loading" tools:ignore="TypographyEllipsis">로드중...</string>

    <!-- 네비게이션 바 -->
    <string name="menu_home">메인 화면</string>
    <string name="menu_find">캐리어 찾기</string>
    <string name="menu_weight">캐리어 무게 측정</string>
    <string name="menu_bagdrop">백드랍 모드</string>
    <string name="menu_info">캐리어 정보</string>

    <!-- 메인 화면 -->
    <string name="authBtn_text">인증 필요</string>
    <string name="connectBtn_text">연결</string>
    <string name="BT_status">블루투스 상태</string>
    <string name="homeText">캐리어에 연결되지 않음</string>
    <string name="BT_btn">블루투스 켜기</string>

    <!-- 캐리어 도난방지 화면 -->
    <string name="text_ignore">알림</string>
    <string name="findBtn_text">찾기</string>
    <string name="title_distance">캐리어와 거리</string>
    <string name="main_distance">정보없음</string>
    <string name="sub_distance">연결되지 않음</string>
    <string name="alert_Btn">도난방지 켜기</string>

    <!-- 캐리어 잠금 화면 -->
    <string name="text_lock_status">잠금 해제 상태</string>
    <string name="lock_info_title">캐리어 잠금 기능이란 ?</string>
    <string name="lock_info_main">캐리어가 잠긴 경우 움직임이 감지될 시 캐리어에서 경고음이 울리고\n앱에서 알림으로 경고를 띄웁니다</string>
    <string name="text_lock_btn">캐리어 잠그기</string>

    <!-- 캐리어 무게측정 화면 -->
    <string name="text_reset">설정 리셋</string>
    <string name="menuBtn_text">무게 설정</string>
    <string name="weight">-- Kg</string>
    <string name="weight_set">허용 무게를 설정하세요</string>
    <string name="weight_info">무게를 측정하지 않았습니다</string>
    <string name="measureBtn">무게 측정 시작</string>

    <!-- 백드랍 모드 화면 -->
    <string name="textTo"><![CDATA[->]]></string>
    <string name="timeBtn_text">도착 시각</string>
    <string name="bagdrop_text">백드랍 비활성화</string>
    <string name="text_connect">캐리어 연결</string>
    <string name="text_weight">무게 측정</string>
    <string name="text_time">도착 예정시각</string>
    <string name="text_checkConnect">연결되지 않음</string>
    <string name="text_checkWeight">측정되지 않음</string>
    <string name="text_checkTime">설정되지 않음</string>
    <string name="btn_bagdrop">백드랍 모드 시작</string>
    <string name="text_leftTime">남은 시간 :</string>
    <string name="text_hourMin">hh시간 mm분</string>

    <!-- 캐리어 정보 화면 -->
    <string name="text_refresh">갱신</string>
    <string name="text_autoSearch">자동검색 꺼짐</string>
    <string name="title_rssi">신호세기</string>
    <string name="main_rssi">측정불가</string>
    <string name="sub_rssi">신호 없음</string>
    <string name="title_battery">배터리</string>
    <string name="main_battery">정보없음</string>
    <string name="sub_battery">Null</string>
    <string name="title_security">도난방지</string>
    <string name="main_security">사용안함</string>
    <string name="sub_security">도난방지 꺼짐</string>
    <string name="title_bluetooth">블루투스</string>
    <string name="main_bt">비활성화</string>
    <string name="sub_bt">블루투스 꺼짐</string>
    <string name="resetBtn">설정 초기화</string>

    <!-- 앱서랍 화면 -->
    <string name="carryon_baggage">기내 수하물</string>
    <string name="checked_baggage">위탁 수하물</string>
    <string name="weight_5">5kg</string>
    <string name="weight_7">7kg</string>
    <string name="weight_10">10kg</string>
    <string name="weight_15">15kg</string>
    <string name="weight_20">20kg</string>
    <string name="weight_23">23kg</string>
    <string name="weight_32">32kg</string>

    <!-- 오버레이 화면 -->
    <string name="overlay_sub">캐리어가 사용자로부터 멀어지고 있습니다\n캐리어가 가까워질 때까지 계속 경고가 울립니다.</string>
    <string name="overlay_main">현재 캐리어의 도난이 의심됩니다</string>
    <string name="overlay_title">캐리어 도난방지 경고!</string>
    <string name="overlayBtn_check">확인</string>
    <string name="overlayBtn_ignore">무시</string>

    <!-- 다이얼로그 화면 -->
    <string name="dialog_main">경고!</string>
    <string name="dialog_sub">여기에 내용이 표시됩니다.</string>
    <string name="dialog_retry">다시시도</string>
    <string name="dialog_okay">확인</string>
    <string name="dialog_cancel">취소</string>

    <!-- 다이얼로그 (시간 설정) 화면 -->
    <string name="dialogTime_main">도착 예정시각 설정</string>
    <string name="dialogTime_hour">시</string>
    <string name="dialogTime_min">분</string>
    <string name="dialogTime_selectedTime">선택된 시간 :</string>
    <string name="dialogTime_setHour">-- 시</string>
    <string name="dialogTime_setMin">-- 분</string>

    <!-- 다이얼로그 배터리 부족 화면 -->
    <string name="battery_main">배터리 경고!</string>
    <string name="battery_sub">캐리어의 배터리가 부족합니다.\n배터리가 부족하면 캐리어가 오동작 할 수 있습니다.</string>
    <string name="battery_rect">캐리어를 충전해주세요!</string>

    <!-- 다이얼로그 패스워드 화면 -->
    <string name="text_password">Password</string>
    <string name="pwd">캐리어의 인증번호를 입력하세요</string>
    <string name="change_pwd">새로 사용할 인증번호를 입력하세요</string>
    <string name="password_main">캐리어 인증</string>
    <string name="auth_title">인증되지 않음</string>
    <string name="auth_main">캐리어와 인증을 하지 않아 캐리어가 잠겨 있습니다.\n캐리어의 모든 기능을 사용할 수 없습니다.</string>
    <string name="auth_sub">캐리어 인증 필요</string>
    <string name="text_change_password">New Password</string>

    <!-- 다이얼로그 앱 정보 화면 -->
    <string name="app_info_title">앱 정보</string>
    <string name="app_info_ver">버전</string>
    <string name="app_info_src_main">개발 소스</string>
    <string name="app_info_src_sub">깃허브 공개</string>
    <string name="app_info_title_main">메인 업데이트</string>
    <string name="app_info_title_sub">마이너 업데이트</string>
    <string name="app_info_okayBtn">확인</string>

</resources>