<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.arduino.Application.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_find"
        android:name="com.arduino.Application.ui.find.FindFragment"
        android:label="@string/menu_find"
        tools:layout="@layout/fragment_find" />

    <fragment
        android:id="@+id/nav_weight"
        android:name="com.arduino.Application.ui.weight.WeightFragment"
        android:label="@string/menu_weight"
        tools:layout="@layout/fragment_weight" />

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.arduino.Application.ui.alert.AlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_alert" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.arduino.Application.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>