<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dialog_icon"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:importantForAccessibility="no"
                android:src="@drawable/bagdrop_time" />

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="23sp"
                android:textColor="@android:color/black"
                android:text="@string/dialogTime_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:background="@drawable/background_indigo"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp">

                <Spinner
                    android:id="@+id/hour_spinner"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/background_spinner"
                    tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialogTime_hour"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="7dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/minute_spinner"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/background_spinner"
                    tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialogTime_min"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="7dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_indigo"
            android:elevation="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogTime_selectedTime"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/selectedHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogTime_setHour"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/selectedMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dialogTime_setMin"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/indigo_500"
                android:text="@string/dialog_okay"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/red_500"
                android:text="@string/dialog_cancel"
                tools:ignore="ButtonStyle,TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>