<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bagDrop.BagDropFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126"
        app:srcCompat="@drawable/bagdrop"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/remain_time"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:background="@drawable/background_rounded"
        android:backgroundTint="#78000000"
        android:gravity="center"
        android:layout_margin="20dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_leftTime"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hourMin"
            android:textColor="@android:color/background_light"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeBtn_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp">
        </TextView>

        <Button
            android:id="@+id/setTime"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bagdrop_time"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textBagDrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bagdrop_text"
        android:textAlignment="center"
        android:textColor="@color/orange_500"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linear_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_orange"
        android:gravity="center_vertical"
        android:padding="7dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58">

        <ImageView
            android:id="@+id/icon_connect"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/bagdrop_not_checked"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/text_connect"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/textTo"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/checkConnect"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_checkConnect"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_orange"
        android:gravity="center_vertical"
        android:padding="7dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67">

        <ImageView
            android:id="@+id/icon_weight"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/bagdrop_not_checked"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/text_weight"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/textTo"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/checkWeight"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_checkWeight"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_orange"
        android:gravity="center_vertical"
        android:padding="7dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76">

        <ImageView
            android:id="@+id/icon_time"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/bagdrop_not_checked"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/textTo"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/checkTime"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_checkTime"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/bagdrop_btn"
        android:layout_width="284dp"
        android:layout_height="59dp"
        android:background="@drawable/button_round"
        android:text="@string/btn_bagdrop"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

</androidx.constraintlayout.widget.ConstraintLayout>