<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dialog_icon"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:importantForAccessibility="no"
                android:src="@drawable/dialog_warning" />

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="23sp"
                android:textColor="@android:color/black"
                android:text="@string/dialog_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/dialog_message_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sub"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/dialog_message_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:src="@drawable/baggage_over32"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/yellow_700"
                    android:layout_marginEnd="10dp"
                    android:text="@string/dialog_retry"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/indigo_500"
                    android:text="@string/dialog_okay"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/red_500"
                    android:text="@string/dialog_cancel"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>